--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -83,6 +83,28 @@ p {
   margin: 0 0 $gutter;
 }
 
+a.menu {
+  background: transparent;
+  border: 0;
+  font-size: $huge;
+  outline: none;
+  &:hover {
+    text-decoration: none;
+  }
+  &:before {
+    @include icon();
+    content: 'b';
+  }
+  &.active {
+    &:before {
+      content: 'x';
+    }
+  }
+  span {
+    display: none;
+  }
+}
+
 /* Layout */
 
 .content {
