--- a/assets/scss/partials/_main.scss
+++ b/assets/scss/partials/_main.scss
@@ -179,6 +179,9 @@
       .menu {
         display: none;
       }
+      .options {
+        display: none;
+      }
     }
     .sidebar + .body {
       margin-right: $sidebar + $gutter;
