--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -387,6 +387,24 @@ a.menu {
   a.menu span {
     display: none; }
 
+#help {
+  bottom: 0;
+  position: fixed;
+  right: 10px;
+  z-index: 999; }
+  #help h2 {
+    background: #333;
+    border-radius: 3px 3px 0 0;
+    color: #FFF;
+    cursor: pointer;
+    font-size: 13px;
+    margin: 0;
+    opacity: 0.9;
+    padding: 5px 15px;
+    white-space: nowrap; }
+    #help h2:hover {
+      opacity: 1; }
+
 /* Layout */
 .content {
   margin: 0 auto;
