--- a/templates/default.html
+++ b/templates/default.html
@@ -48,10 +48,14 @@
         <a href='#main' class='menu'><span>Menu</span></a>
 
         <nav class='links'>
-          <a class='email' href='http://www.facebook.com/sharer.php?u={{ path }}'><span>Email</span></a>
-          <a class='facebook' href=''><span>Facebook</span></a>
-          <a class='twitter' href='https://twitter.com/share?url={{ path }}'><span>Twitter</span></a>
-          <a class='linkedin' href='http://www.linkedin.com/shareArticle?mini=true&url={{ path }}&title={{ title }}&source=World%20Bank'><span>LinkedIn</span></a>
+          
+
+
+
+          <a class='email' href='mailto:?body={{ site.url + path | url_encode }}'><span>Email</span></a>
+          <a class='facebook' target='_blank' href='http://www.facebook.com/sharer/sharer.php?u={{ site.url + path | url_encode }}'><span>Facebook</span></a>
+          <a class='twitter' target='_blank' href='https://twitter.com/intent/tweet?url={{ site.url + path | url_encode }}'><span>Twitter</span></a>
+          <a class='linkedin' href='http://www.linkedin.com/shareArticle?mini=true&url={{ site.url + path | url_encode }}&title={{ title | url_encode }}&source={{ "World Bank" | url_encode }}'><span>LinkedIn</span></a>
         </nav>
 
         <h1>{{ title }}</h1>
