--- a/templates/default.html
+++ b/templates/default.html
@@ -48,14 +48,10 @@
         <a href='#main' class='menu'><span>Menu</span></a>
 
         <nav class='links'>
-          
-
-
-
-          <a class='email' href='mailto:?body={{ site.url + path | url_encode }}'><span>Email</span></a>
+          <a class='email' target='_blank' href='mailto:?body={{ site.url + path | url_encode }}'><span>Email</span></a>
           <a class='facebook' target='_blank' href='http://www.facebook.com/sharer/sharer.php?u={{ site.url + path | url_encode }}'><span>Facebook</span></a>
           <a class='twitter' target='_blank' href='https://twitter.com/intent/tweet?url={{ site.url + path | url_encode }}'><span>Twitter</span></a>
-          <a class='linkedin' href='http://www.linkedin.com/shareArticle?mini=true&url={{ site.url + path | url_encode }}&title={{ title | url_encode }}&source={{ "World Bank" | url_encode }}'><span>LinkedIn</span></a>
+          <a class='linkedin' target='_blank' href='http://www.linkedin.com/shareArticle?mini=true&url={{ site.url + path | url_encode }}&title={{ title | url_encode }}&source={{ "World Bank" | url_encode }}'><span>LinkedIn</span></a>
         </nav>
 
         <h1>{{ title }}</h1>
