Adding viewport meta

--- a/templates/default.html
+++ b/templates/default.html
@@ -13,6 +13,7 @@
 <head>
   <title>{{ title }} | Data</title>
 
+  <meta name='viewport' content='width=device-width, initial-scale=1'/>
   <meta http-equiv='Content-Type' content='text/html; charset=utf-8'/>
   <meta name='description' content='{{ locales.description }}'/>
   <meta name='dcterms.description' content='{{ locales.decription }}'/>
