--- a/public/assets/styles.css
+++ b/public/assets/styles.css
@@ -731,6 +731,7 @@ a.menu {
     display: none; } }
 
 @media (min-width: 961px) {
+  /* TEST FOR LEFT SIDEBAR */
   #main .header .links {
     float: right;
     padding: 10px 0; }
@@ -753,7 +754,22 @@ a.menu {
       margin-top: 20px;
       position: absolute;
       right: 0;
-      top: 0; } }
+      top: 0; }
+  body.demand-and-engagement #main .sidebar {
+    float: left; }
+    body.demand-and-engagement #main .sidebar.sticky {
+      right: auto;
+      left: 0;
+      margin-right: 0;
+      margin-left: 20px; }
+  body.demand-and-engagement #main .sidebar + .body {
+    margin-right: 0;
+    margin-left: 320px; }
+  body.demand-and-engagement #main .body {
+    border-right: 0;
+    padding-right: 0;
+    border-left: 1px solid #e0e0e0;
+    padding-left: 20px; } }
 
 #footer {
   font-size: 12px; }
