--- a/templates/partials/_social.html
+++ b/templates/partials/_social.html
@@ -1,4 +1,5 @@
 <a class='email' target='_blank' href='mailto:?body={{ site.url + path | url_encode }}'><span>Email</span></a>
 <a class='facebook' target='_blank' href='http://www.facebook.com/sharer/sharer.php?u={{ site.url + path | url_encode }}'><span>Facebook</span></a>
 <a class='twitter' target='_blank' href='https://twitter.com/intent/tweet?url={{ site.url + path | url_encode }}'><span>Twitter</span></a>
+<a class='gplus' target='_blank' href='https://plus.google.com/share?url={{ site.url + path | url_encode }}'><span>Google+</span></a>
 <a class='linkedin' target='_blank' href='http://www.linkedin.com/shareArticle?mini=true&url={{ site.url + path | url_encode }}&title={{ title | url_encode }}&source={{ "World Bank" | url_encode }}'><span>LinkedIn</span></a>
